--- a/EXTRA_CREDIT.Rmd
+++ b/EXTRA_CREDIT.Rmd
@@ -19,7 +19,7 @@ You may submit up to three extra credit essays -- one or two for each of the opt
 
 #### Total points possible: 10 (one submission)
 
-**Due at the end of finals period**
+**Due Monday May 9 by midnight**
 
 **Objectives:**  
 1. Connect the content of this course with active research areas in the expanding, dynamic field of population ecology.   
@@ -29,7 +29,7 @@ Select a *peer-reviewed journal article* on a topic _relevant to applied populat
 
 - The article should develop a population model to address a conservation or management question
       - The article could present newly collected data that were then analyzed to parameterize a population model, *OR* could present an analysis of already existing data to develop a different population model than has already been developed for the species/system.
-      - For an example of the type of article you should look for (PDF is in the “Files” folder on WebCampus and linked to the assignment page):      
+      - For an example of the type of article you should look for (PDF is in WebCampus):      
 
 > [Crowder, Larry B., Crouse, D., Heppell, S., and Martin, T.  1994. Predicting the impact of turtle excluder devices on loggerhead sea turtle populations. Ecological Applications 4(3):437–445.](crowder1994.pdf)
 
@@ -58,9 +58,7 @@ Upload your written response and a PDF of the journal article to WebCampus.
 **Attend** (in-person or online) a **talk or seminar** on a topic *relevant to population ecology*.    
 
 - The talk, presentation, or seminar should directly discuss population model(s) and the application to a conservation or management question
-     - The list of suggested online or in-person talks to attend will continuously be updated throughout the semester on the Discussion thread on WebCampus.     
-     - If you discover a talk you’d like to attend that is not on the list, please obtain prior approval to make sure it will be accepted for this assignment (and let your fellow classmates know about the opportunity on WebCampus!).
-     - The talk/presentation should be a minimum of 20 min long.   
+     - The talk/presentation should be a minimum of 40 min long.   
     
 **Write a response to the talk you attended:**     
 
