--- a/LECTURE16.Rmd
+++ b/LECTURE16.Rmd
@@ -54,12 +54,12 @@ Competition is defined a type of inter-species interaction by which the *populat
 There is not much essential difference between within-species competition (one of the primary mechanisms for density-dependent population regulation) and among-species competition for resources!
 
 #### Exploitation
-This is the kind of competition we probably think about first- all individuals are competing for resources and all have similar competitive abilities. It's a free-for-all: everyone gets some piece of a limited pie!  
+This is the kind of competition we probably think about first- all individuals are competing for resources and all have similar competitive abilities. It's a free-for-all: everyone gets some piece of a limited pie! But competition is indirect- that is, individuals of different species are interacting directly with a common resource pool, not with each other.   
 
 Competition for resources within species is often the mechanism behind the density-dependent processes that we have already discussed this class. Within a single species, this is often called "*scramble competition*".  
 
 #### Interference
-Sometimes the negative effect of one actor (individual of the same or another species) on another actor is due to direct behavioral exclusion. This is the case with birds that maintain territories and keep other birds off the territory. 
+Sometimes the negative effect of one actor (individual of the same or another species) on another actor is due to direct behavioral exclusion. This is the case with birds that maintain territories and keep other birds off their territory. 
 
 Some plants engage in interference competition in a process called "allelopathy".
 
