--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -119,9 +119,7 @@ Your group presentation should be in the style of an oral presentation at a conf
 
 Presentations will take place during our final two lab periods. 
 
-You will have 15 minutes to give your presentations, with at least 3 additional minutes for questions.  
-
-We will hand out a simple peer-review form so you can give feedback to your peers. 
+You will have 12 minutes to give your presentations, with 3 additional minutes for questions.  
 
 A rubric for the presentations can be found [here](presentationProject_rubric.docx)
 
@@ -131,11 +129,11 @@ In lab on Fri Apr 22 we will have a "peer review" session where we will have a c
 
 The way it will work is as follows:
 
-1. By the end of the day on April 22, you will receive another group's draft manuscript via WebCampus (see list below). 
+1. In the week before the peer review you will receive another group's draft manuscript via WebCampus. 
 
 2. Before lab, please thoroughly read the manuscript you have been assigned, and make comments, paying particular attention to the [grading rubric](WrittenProject_rubric.docx). 
 
-3. During the lab period, you will first get together with the other students that were also assigned to review the same manuscript. You will have 30 minutes to compare notes and prepare a written "peer review" of the manuscript that highlights both the strengths and the weaknesses. Please make your comments as specific and constructive as possible. The goal is to give your classmates feedback that will be useful to them as they prepare their final drafts! *Please hand in your peer-review to the group that wrote the draft AND your instuctor/TA* (submit/share via WebCampus)
+3. During the lab period, you will first get together with the other students that were also assigned to review the same manuscript. You will have 30-35 minutes to compare notes and prepare a written peer-review of the manuscript that highlights both the strengths and the weaknesses that you found. Please make your comments as specific and constructive as possible. The goal is to give your classmates feedback that will be useful to them as they prepare their final drafts! *Please hand in your peer-review to the group that wrote the draft AND your instuctor/TA* (submit/share via WebCampus)
 
 4. After that, we will break up into new groups. One representative from each peer-review group will meet with the project group that wrote the draft manuscript, to give feedback in person.
 
@@ -143,9 +141,6 @@ The way it will work is as follows:
 
 Bring your laptops to lab as usual so you can write, save and share your peer-review electronically with your classmates/instructors. 
 
-### Peer review: presentations
-
-During the final project presentations, please provide feedback to your classmates using [this form](presentation_handout_for_students.docx) (these will be handed out in class on the day of the final project presentations)
 
 ### Tips for a great presentation!
 
@@ -154,7 +149,7 @@ Here are some general notes about how to prepare and deliver a great presentatio
 
 Note: make sure you give proper credit for all pictures (e.g., what website did it come from?)
 
-- Excitement is infectious- make sure you convey your excitement about the project. You all worked very hard, and you should be proud of what you were able to do. Now you can share this excitement with your colleagues! Many inexperienced presenters make the mistake of highlighting only what they were not able to accomplish. Try to avoid this pitfall- shortcomings should be limited to a single slide in the discussion section of the presentation. 
+- Excitement is infectious- make sure you convey your excitement about the project. You all worked very hard, and you should be proud of what you were able to do. Now you can share this excitement with your colleagues! Many inexperienced presenters make the mistake of highlighting only what they were *not* able to accomplish. Try to avoid this pitfall- shortcomings should be limited to a single slide in the discussion section of the presentation. 
 
 - A good presentation should *tell a story*. It has a beginning, middle and an end. Every slide flows logically from what came before. 
 
@@ -162,7 +157,7 @@ Note: make sure you give proper credit for all pictures (e.g., what website did 
 
 - Every presentation is a performance. Performance requires practice!! The real work comes before the performance- putting together the slides and practicing the delivery. When the time comes to actually give the performance, relax and have fun- the hard work is over!  
 
-Note: please don't use fancy backgrounds- keep your slides as clean as possible. Animations can be useful, but excessive animation is just a distraction!
+Note: please don't use fancy backgrounds- keep your slides as clean as possible. Animations can be useful, but excessive animation is distracting!
 
 #### Title slide
 
@@ -179,25 +174,22 @@ Note: please don't use fancy backgrounds- keep your slides as clean as possible.
 
 #### Methods
 
-- Provide a very abbreviated summary of your PVA model. You don't have time to provide all the details that are in your written Methods section! So try to distill the key elements of your methods. Be careful you don't spend too much time on this section! The details you provide here must be clearly relevant to your research questions. All you need to do is convince your peers that your methods were appropriate for addressing your questions. 
+- Provide a *very abbreviated* summary of your PVA model. You don't have time to provide all the details that are in your written Methods section! So try to distill the key elements of your methods. Be careful you don't spend too much time on this section! The details you provide here must be clearly relevant to your research questions. All you need to do is convince your peers that your methods were appropriate for addressing your questions. 
 
 - You can include supplemental slides that provide more details on your methods (after the last "real" slide). It can be helpful to refer to supplemental slides if someone asks a question about your methods! 
 
 
-#### Results
+#### Results and Discussion
 
-- Include key figures that relate to the main questions. 
+- Include key figures that relate to the main questions. Only include those figures that are the most relevant to your main research questions- too many figures can be distracting.  
 
-- For all graphs, make sure you explain what the axes represent! Also, make sure the axis labels are large enough to be readable from the back of the room!
+- For all plots, make sure you explain what the axes and symbols represent! Also, make sure the axis labels are large enough to be readable from the back of the room!
 
-
-#### Discussion
-
-- Summarize your key findings- what did you learn? 
+- Summarize key findings- what did you learn? Make sure these findings relate to the research questions stated in the introductory slides
 
 - Management implications- how could wildlife managers act upon your findings??
 
-- Just one slide discussing shortcomings of your project and how you would improve your model and design if you had additional time. 
+- *Just one slide* discussing shortcomings of your project and how you would improve your model and design if you had additional time. 
 
 - Describe what you or other researchers could do to expand upon your findings- what are the next steps? 
 
