--- a/index.Rmd
+++ b/index.Rmd
@@ -61,7 +61,7 @@ Quizzes and participation        10%  (40 points)
 Group project                    25%  (100 points)      
 Midterm exam # 1 (date TBD)	     10%  (40 points)    
 Midterm exam # 2 (date TBD)   	 10%  (40 points)    
-Final exam (5/8/2020)   	       25%  (100 points)    
+Final exam              	       25%  (100 points)    
 
 NOTE: Graduate students enrolled in NRES 670 will have an additional 50 pts used to calculate their grade (see below) of a total of 370 points.     
 Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82 to 80), C+ (79 to 77), C (76 to 73), C- (72 to 70), D+ (69 to 67), D (66 to 63), D- (62 to 60), F (below 60). 
