start updating for 2023

--- a/LECTURE8.Rmd
+++ b/LECTURE8.Rmd
@@ -66,7 +66,7 @@ To download the R script for this lecture, click [here](LECTURE8.R)
 
 We will have a review session during our regular class meeting on the Monday prior to the exam (next Monday, March 7). Please make note of any questions that come up as you study- we can talk these over during the review session!
 
-![](uncertainty2.jpg)
+![](uncertainty2.jpg){width=25%}
 
 ## Uncertainty!
 
