--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Welcome to NRES 470/670"
-author: "Applied Population Ecology, Spring 2022"
+author: "Applied Population Ecology, Spring 2023"
 output:
   html_document: 
     theme: spacelab
@@ -20,16 +20,16 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 **Office hours**: M 4pm in FA 220e         
 **Course Website**: [https://kevintshoemaker.github.io/NRES-470/](https://kevintshoemaker.github.io/NRES-470/) 	    
  
-**Teaching Assistant** Margarete Walden (mwalden_dot_unr_dot_edu)          
-**TA Office hours**: T 3pm in FA 235       
+**Teaching Assistant** Sage Ellis         
+**TA Office hours**: TBD       
 
 ### Course Meeting Times
 
-**Lecture & Discussion**: M, W at 10am (50 mins) in AB 213         
+**Lecture & Discussion**: M, W at 10am (50 mins) in WRB 3046         
 **Lab**: F at 1pm (2 hrs 45 mins) in FA 301      
     
 ### Course description  
-This class will explore how concepts of population ecology can be used to inform the conservation and management of natural populations and ecosystems. We will emphasize practical approaches to problem-solving in ecology, conservation, and wildlife management using simulation models and statistics. Topics will include population viability analysis (PVA), habitat suitability models, metapopulation models, competition and predation models, threats to population viability, wildlife population management and more. Laboratory exercises will provide students with hands-on experience with population models and their practical applications in the conservation and management of wild populations.
+This class will explore how concepts of population ecology can be used to inform the conservation and management of natural populations and ecosystems. We will emphasize practical approaches to problem-solving in ecology, conservation, and wildlife management using simulation models and inferential statistics. Topics will include Population Viability Analysis (PVA), habitat suitability, metapopulations, species interactions (competition and predation), threats to wild populations, wildlife management and more. Laboratory exercises will provide students with hands-on experience with wildlife population models and their practical applications in wildlife ecology and management.
 
 ### Prerequisites    
 - BIOL 314 or NRES 217 (Ecology)  
@@ -37,17 +37,17 @@ This class will explore how concepts of population ecology can be used to inform
 
 ### Texts  
 - [Gotelli, N. J. A primer of ecology](https://www.amazon.com/Primer-Ecology-Fourth-Nicholas-Gotelli/dp/0878933182)      
-- optional: [Beyond Connecting the Dots](http://beyondconnectingthedots.com/) (free download)   
-- Additional readings from the primary literature will be assigned for discussion periodically.    
+- Additional readings will be assigned for discussion periodically.    
 
 ### Software   
-- [InsightMaker- free web-based systems modeling tool](https://insightmaker.com/)(no installation needed)        
-- [R- free statistical programming language](https://cran.r-project.org/)      
-- MS Excel (hopefully you already have this or equivalent spreadsheet software on your laptop!)
+- [InsightMaker- web-based systems modeling tool](https://insightmaker.com/)(free, no installation needed)        
+- [R- software for statistical computing and graphics](https://cran.r-project.org/) (free, open-source)      
+- Spreadsheet software (MS Excel, Google Sheets or equivalent)
+- PointSolutions (interactive classroom software- sign up via WebCampus)
 
 ### Student Learning outcomes
-SLO 1.	Identify the major classes of models used by ecologists (e.g., statistical vs mechanistic, quantitative vs heuristic, stochastic vs deterministic) and explain how and why ecologists use these models.    
-SLO 2.	Apply tools such as population viability analysis (PVA) and metapopulation models to address the conservation and management of natural populations.   
+SLO 1.	Explain how and why simulation models are used by ecologists and wildlife professionals.    
+SLO 2.	Apply tools such as population viability analysis (PVA) and metapopulation models to address the conservation and management of wild populations.   
 SLO 3.	Perform basic statistics, data visualization, simulation modeling and model validation with Excel, the statistical computing language 'R', and the web-based software, InsightMaker.    
 SLO 4.	Critically evaluate the strength of inferences drawn from ecological simulation models using tools such as sensitivity analysis.    
 SLO 5.	Explain how species interactions can influence population dynamics (e.g., predictions of species range shifts).     
@@ -56,18 +56,18 @@ SLO 6.	Communicate original research in applied population and community ecology
 ### Grading: 
 The course grade will be based on the following components:
 
-Lab exercises (7 total)	         20%  (70 points)     
-Quizzes and participation        10%  (40 points)     
-Group project                    25%  (100 points)      
+Lab exercises (7 total)	         20%  (80 points)     
+Lectures/participation           10%  (40 points)     
+Group project                    30%  (120 points)      
 Midterm exam # 1 (date TBD)	     10%  (40 points)    
 Midterm exam # 2 (date TBD)   	 10%  (40 points)    
-Final exam              	       25%  (100 points)    
+Final exam              	       20%  (80 points)    
 
 NOTE: Graduate students enrolled in NRES 670 will have an additional 50 pts used to calculate their grade (see below) of a total of 370 points.     
 Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82 to 80), C+ (79 to 77), C (76 to 73), C- (72 to 70), D+ (69 to 67), D (66 to 63), D- (62 to 60), F (below 60). 
 
 ### Exams:
-There will be two midterm exams and a final exam, all of which will be cumulative, covering all course material covered up to the week prior to the exam. These will consist of multiple-choice, short-answer questions, and essay questions requiring synthesis of ideas and critical thinking. The midterm and final exams will be cumulative, and based on all information presented up through the week prior to the exam.
+There will be two midterm exams and a final exam, all of which will be cumulative, covering all course material covered up to the week prior to the exam. These will consist of multiple-choice, short-answer questions, and essay questions requiring synthesis of key concepts.
 
 ### Lectures
 Lecture grades will be based primarily on participation and short quizzes. Participation is essential to the learning process (and to our mutual enjoyment of this class). Learning is not a passive process; students are expected to engage with the material in class rather than simply listen and take notes. You should be prepared in class to ask questions, to answer questions, and to engage in problem-solving activities.   
@@ -76,67 +76,58 @@ Lecture grades will be based primarily on participation and short quizzes. Parti
 Lab exercises will focus on applying concepts and methods introduced in lectures, and will involve real-world problems in wildlife conservation and management wherever possible. Graded lab assignments will involve figures, tables, InsightMaker models and R code (when applicable) and responses to questions in short-answer format.  
 
 ### Final group project 
-Students will work in groups of ~4 to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations. 
+Students will work in groups of 3-4 to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations. 
 
 ### Graduate credit (for students enrolled in NRES 670) 
 Graduate students will be subject to additional expectations in order to receive graduate credit for this course. In particular, graduate students will be expected to develop an original lecture and lead an original lab activity related to their lecture. Graduate students will also be expected to achieve a deeper understanding of the course material, and therefore will be assigned additional readings from the scientific literature and will be expected to participate as leaders in discussions and lab activities.
 
 ### Make-up policy and late work:
-Missed exams and labs cannot be made up, except in the case of emergencies. If you miss a class meeting, it is your responsibility to talk to one of your classmates about what you missed. If you miss a lab meeting, you are still responsible for completing the lab activities and write-up on your own time. Whenever possible, please let me know in advance if you are going to miss class or lab.
+Missed exams and labs cannot be made up, except in the case of emergencies. If you miss a class meeting, it is your responsibility to talk to one of your classmates about what you missed. If you miss a lab meeting, you are still responsible for completing the lab activities and write-up. Let me or your TA know in advance if you are going to miss class or lab.
 
-### Top Hat
-We will be using the [Top Hat](www.tophat.com) interactive learning platform in class. You will be able to submit answers to in-class questions using Apple or Android smartphones and tablets, laptops, or through text message.  
+### PointSolutions
+We will be using the PointSolutions interactive learning platform in class. You will be able to submit answers to in-class questions using Apple or Android smartphones and tablets, laptops, or through text message.  
 
-You can visit the Top Hat Overview (https://success.tophat.com/s/article/Student-Top-Hat-Overview-and-Getting-Started-Guide) within the Top Hat Success Center which outlines how you will register for a Top Hat account, as well as providing a brief overview to get you up and running on the system.
+You can sign up using the link on WebCampus. The cost is $15 per year for UNR students. For more information please see [https://www.unr.edu/digital-learning/tools-and-technologies/student-response-systems/pointsolutions-students](https://www.unr.edu/digital-learning/tools-and-technologies/student-response-systems/pointsolutions-students) 
 
-An invitation will be sent to you by email, but if you don’t receive this email, you can register by simply visiting our course website: [https://app.tophat.com/e/809153](https://app.tophat.com/e/809153)       
-Note: our Course Join Code is 809153
-
-Top Hat may require a paid subscription, and a full breakdown of all subscription options available can be found here: [www.tophat.com/pricing](www.tophat.com/pricing). 
-
-Should you require assistance with Top Hat at any time, due to the fact that they require specific user information to troubleshoot these issues, please contact their Support Team directly by way of email ([support@tophat.com](support@tophat.com)), the in-app support button, or by calling 1-888-663-5491.
-
-### Students with Disabilities
-Any student with a disability needing academic adjustments or accommodations is requested to speak with the Disability Resource Center (Thompson Building, Suite 101) as soon as possible to arrange for appropriate accommodations.
+### Statment on Disabilities Services
+Any student with a disability needing academic adjustments or accommodations is requested to speak with me or the [Disability Resource Center](http://www.unr.edu/drc) (Pennington Achievement Center Suite 230) as soon as possible to arrange for appropriate accommodations.
 
 ### Statement on Academic Dishonesty
-Cheating, plagiarism or otherwise obtaining grades under false pretenses constitute academic dishonesty according to the code of this university. Plagiarism is using the ideas or words of another person without giving credit to the original source; this includes copying another student in class. Always cite the source of your information. This includes copying or paraphrasing from a book, journal, or unpublished material without giving credit to the author(s), and submitting a term paper that was used in another course. Academic dishonesty will not be tolerated and penalties can include filing a final grade of "F"; reducing the student's final course grade one or two full grade points; awarding a failing mark on the coursework in question; or requiring the student to retake or resubmit the coursework. For more details, see the [University of Nevada, Reno General Catalog](http://catalog.unr.edu/).
+The University Academic Standards Policy defines academic dishonesty, and mandates specific sanctions for violations. See the University Academic Standards policy: [UAM 6,502](https://www.unr.edu/administrative-manual/6000-6999-curricula-teaching-research/instruction-research-procedures/6502-academic-standards).
+
+### Statement on Student Compliance with University Policies
+In accordance with section 6,502 of the University Administrative Manual, a student may receive academic and disciplinary sanctions for failure to comply with policy, including this syllabus, for failure to comply with the directions of a University Official, for disruptive behavior in the classroom, or any other prohibited action. “Disruptive behavior" is defined in part as behavior, including but not limited to failure to follow course, laboratory or safety rules, or endangering the health of others. A student may be dropped from class at any time for misconduct or disruptive behavior in the classroom upon recommendation of the instructor and with approval of the college dean. A student may also receive disciplinary sanctions through the Office of Student Conduct for misconduct or disruptive behavior, including endangering the health of others, in the classroom. The student shall not receive a refund for course fees or tuition.
 
 ### Statement on Audio and Video Recording
 #### Student-created Recordings
 Surreptitious or covert video-taping of class or unauthorized audio recording of class is prohibited by law and by Board of Regents policy. This class may be videotaped, or audio recorded only with the written permission of the instructor. In order to accommodate students with disabilities, some students may have been given permission to record class lectures and discussions. Therefore, students should understand that their comments during class may be recorded.
 
 #### Instructor-created Recordings
-Class sessions may be audio-visually recorded for students in the class to review and for enrolled students who are unable to attend live to view. Students who participate with their camera on or who use a profile image are consenting to have their video or image recorded. If you do not consent to have your profile or video image recorded, keep your camera off and do not use a profile image. Students who un-mute during class and participate orally are consenting to have their voices recorded.  If you do not consent to have your voice recorded during class, keep your mute button activated and only communicate by using the "chat" feature, which allows you to type questions and comments live.
+Class sessions may be audio-visually recorded for students in the class to review and for enrolled students who are unable to attend live to view. Students who participate with their camera on or who use a profile image are consenting to have their video or image recorded.  If you do not consent to have your profile or video image recorded, keep your camera off and do not use a profile image. Students who un-mute during class and participate orally are consenting to have their voices recorded.  If you do not consent to have your voice recorded during class, keep your mute button activated and only communicate by using the "chat" feature, which allows you to type questions and comments live.
+
 
 ### Statement for Academic Success Services
 Your student fees cover usage of the University Math Center [(775) 784-4433], University Tutoring Center [(775) 784-6801], and [University Writing Center (775) 784-6030]. These centers support your classroom learning; it is your responsibility to take advantage of their services.
 
-### This is a safe space
-The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University's Equal Opportunity & Title IX office at 775-784-1547. Resources and interim measures are available to assist you. For more information, please visit the Equal Opportunity and Title IX page: http://www.unr.edu/equal-opportunity-title-ix.
+### Statement on Maintaining a Safe Learning and Work Environment
+The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the [University's Equal Opportunity & Title IX office](https://www.unr.edu/equal-opportunity-title-ix) at 775-784-1547. Resources and interim measures are available to assist you. For more information, please visit the Equal Opportunity and Title IX page. 
 
 ### Statement on COVID-19 Policies
 
 #### Face Coverings
-In response to COVID-19, and in alignment with State of Nevada Governor Executive Orders, Roadmap to Recovery for Nevada plans, Nevada System of Higher Education directives, the University of Nevada President directives, and local, state, and national health official guidelines face coverings are required at all times while on campus, except when alone in a private office. This includes the classroom, laboratory, studio, creative space, or any type of in-person instructional activity, and public spaces.
-
-A “face covering” is defined as a “covering that fully covers a person’s nose and mouth, including without limitation, cloth face mask, surgical mask, towels, scarves, and bandanas” (State of Nevada Emergency Directive 024).
-
-Students that cannot wear a face covering due to a medical condition or disability, or who are unable to remove a mask without assistance may seek an accommodation through the Disability Resource Center.
-
-#### Social Distancing:
-In alignment with State of Nevada guidelines, social distancing is no longer required.  
+Pursuant to Nevada law, NSHE employees, students and members of the public are not required to wear face coverings while inside NSHE buildings irrespective of vaccination status. However, students may elect wear face coverings if they choose. 
 
 #### Disinfecting Your Learning Space
-Disinfecting supplies are provided for you to disinfect your learning space. You may also use your own disinfecting supplies.
+Disinfecting supplies are provided for your convenience to disinfect your learning space. You may also use your own disinfecting supplies. 
 
-#### COVID-19 Like Symptoms, and Contact with Someone Testing Positive for COVID-19
-Students testing positive for COVID 19, exhibiting COVID 19 symptoms regardless of vaccination status will not be allowed to attend in-person instructional activities and must leave the venue immediately. Students should contact the Student Health Center or their health care provider to receive care and who can provide the latest direction on quarantine and self-isolation. Contact your instructor immediately to make instructional and learning arrangements.
+#### Testing Positive for COVID-19 or Exhibiting COVID-19 Symptoms
+Students testing positive for COVID 19 or exhibiting COVID 19 symptoms will not be allowed to attend in-person instructional activities and must leave the venue immediately. Students should contact the Student Health Center or their health care provider to receive care and information pertaining to the latest COVID 19 quarantine and self-isolation protocols. If you are required to quarantine or self-isolate, you must contact your instructor immediately to make instructional and learning arrangements.  
 
-#### Statement on Failure to Comply with Policy (including as outlined in this Syllabus) or Directives of a University Employee
-In accordance with section 6,502 of the University Administrative Manual, a student may receive academic and disciplinary sanctions for failure to comply with policy, including this syllabus, for failure to comply with the directions of a University Official, for disruptive behavior in the classroom, or any other prohibited action. “Disruptive behavior" is defined in part as behavior, including but not limited to failure to follow course, laboratory or safety rules, or endangering the health of others. A student may be dropped from class at any time for misconduct or disruptive behavior in the classroom upon recommendation of the instructor and with approval of the college dean. A student may also receive disciplinary sanctions through the Office of Student Conduct for misconduct or disruptive behavior, including endangering the health of others, in the classroom. The student shall not receive a refund for course fees or tuition.
+#### Accommodations for COVID 19 Quarantined Students
+For students who are required to quarantine or self-isolate due to testing positive for COVID or exhibiting COVID 19 symptoms, instructors must provide opportunities to make-up missed course work, including assignments, quizzes or exams. In courses with mandatory attendance policies, instructors shall not penalize students for missing classes while quarantined.
 
-
+### Statement for Academic Success Services
+Your student fees cover usage of the [University Math Center](https://www.unr.edu/university-math-center), (775) 784-4433; [University Tutoring Center](https://www.unr.edu/tutoring-center), (775) 784-6801; and [University Writing & Speaking Center](https://www.unr.edu/writing-speaking-center), (775) 784-6030. These centers support your classroom learning; it is your responsibility to take advantage of their services. Keep in mind that seeking help outside of class is the sign of a responsible and successful student.
 
 
 ```{r echo=FALSE, eval=FALSE}
