--- a/LECTURE1.Rmd
+++ b/LECTURE1.Rmd
@@ -37,6 +37,8 @@ And here's a more abstract example that illustrates some really cool and complex
 
 [Lorenz attractor](https://insightmaker.com/insight/1829/Lorenz-Attractor)
 
+[PointSolutions]: emergent properties question
+
 ## *InsightMaker*: a modeling framework for systems thinking!
 
 [InsightMaker](insightmaker.com) is a flexible web-based software for defining interacting systems and for modeling the behavior of inter-connected systems. 
@@ -61,7 +63,15 @@ Of course, this means not just reading and listening to lectures, it means *lear
 
 ## Class example: harvest of horseshoe crabs in Delaware Bay
 
-Brief intro to real-world example!
+Real-world example- we will revisit throughout the class!
+
+![](rekn_hsc1.png){width=50%}
+
+*Why harvest horseshoe crabs?* Eel and Whelk ("Conch") fisheries rely on horseshoe crabs as bait. 
+
+*Why restrict horseshoe crab harvest?* Red Knots and other shorebirds depend on horseshoe crab eggs as a key source of energy when migrating northward in the spring!
+
+**Problem statement**: "Manage harvest of horseshoe crabs in the Delaware Bay to maximize harvest but also to maintain ecosystem integrity, provide adequate stopover habitat for migrating shorebirds, and ensure that the abundance of horseshoe crabs is not limiting the red knot stopover population or slowing recovery"
 
 ## In-class Exercise: InsightMaker
 
