--- a/LECTURE2.Rmd
+++ b/LECTURE2.Rmd
@@ -54,7 +54,6 @@ Giant puffballs produce 7 trillion offspring (12 zeroes!) in one reproductive ev
 ... If all of those individuals reached adulthood, the descendants from just two parent puffballs would weigh more than the entire planet in two generations!
 
 The reason? Populations can exhibit **exponential growth**, in which each new addition to the population expands the reproductive potential of the population in a **positive feedback loop**.    
-
 ## Mathematics and Population Ecology
 
 'Mathematics seems to endow one with a new sense'    
@@ -70,11 +69,9 @@ The importance of the method is this: if we know certain variables, mostly desir
   
 ## Exponential growth
 
-In lab we went over the mathematics of exponential growth. Now we will go over the concept of exponential growth, focusing on the idea of exponential growth as a **positive feedback loop**. 
+Exponential growth is the result of a **positive (reinforcing) feedback loop**. 
 
 ![](positivefeedback1.png)
-
-## In-class Exercise: positive feedbacks
 
 **Feedbacks** in systems occur when the input and output rates (e.g., births and deaths per year) depend upon the value of the stock (e.g., a wild population!). 
 
@@ -85,6 +82,8 @@ A reinforcing, or **positive feedback** (often called a 'vicious circle') leads 
 A **negative feedback** is stabilizing, leading to nice, orderly, regulated systems (and homeostasis in organismal biology!). We'll talk more about negative feedbacks in populations soon enough (population regulation). 
 
 In the previous in-class exercise the model structure produced linear growth as the [Flow] added a fixed amount to the [Stock] in each time step.
+
+## In-class Exercise: positive feedbacks
 
 **Q**: What do the following have in common: snowball, people, rabbits, fire, bacteria, fleas, savings accounts, cancer?  
 
